Fixed Headers & Deleted Unused Page
I fixed the title in each page headers and deleted the Lake Wissota page
because we're not using it anymore.

--- a/directions.html
+++ b/directions.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta content="width=device-width, initial-scale=1" name="viewport">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Jigs Up | Home</title>
+  <title>Jigs Up | Directions</title>
 
   <!-- Bootstrap -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
