--- a/schedule.html
+++ b/schedule.html
@@ -7,7 +7,7 @@
 
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Jigs Up | Home</title>
+  <title>Jigs Up | Schedule</title>
 
   <!-- Bootstrap -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
