Moved Rules PDF and deleted unused items

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Scheels Kids Klub will offer an ice fishing clinic at Scheels on Friday, Februar
 							apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.</i>
 <br />
 <br />
-            <a class="rules" target="_blank" href="images/rules.pdf">Rules</a>  </p>
+            <a class="rules" target="_blank" href="assets/rules.pdf">Click here for the rules</a></p>
         </div>
         <!-- #col-sm-6  -->
         <div class="col-sm-6">
@@ -206,7 +206,7 @@ Scheels Kids Klub will offer an ice fishing clinic at Scheels on Friday, Februar
       <br />
     </p>
     <div class="buildn">
-      /build 0.8.6.0
+      /build 0.8.9.0
     </div>
   </div>
 
