--- a/sponsors.html
+++ b/sponsors.html
@@ -47,7 +47,7 @@
 					"button"><span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span> <span class="icon-bar"></span>
 					<span class="icon-bar"></span></button>
-					<a class="navbar-brand" href="index.html"> <img src="images/logo.png" /> </a> <!-- Logo top aligns with navbar text top. -->
+					<a class="navbar-brand" href="index.html"> <img src="images/logo.png"/> </a> <!-- Logo top aligns with navbar text top. -->
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 
@@ -84,35 +84,35 @@
 <body>
 	<br />
 	<br />
-	<section id="prizeGrid"> <!-- Images must be 400x300 -->
+	<section id="prizeGrid"> <!-- Images must be 300x255 -->
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
 					<h2 class="headers">Sponsors</h2>
 				</div> <!-- #col-lg-12 -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<img class="img-responsive" src="images\sponsors\eskimo.png" alt="">
+						<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<img class="img-responsive" src="images\sponsors\gordys.png" alt="">
+						<a href="http://www.gordyscountymarket.net" target="_blank"><img class="img-responsive" src="images\sponsors\gordys.png" alt="Gordy's County Market"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<img class="img-responsive" src="images\sponsors\lein.png" alt="">
+						<a href="http://www.leinie.com" target="_blank"><img class="img-responsive" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<img class="img-responsive" src="images\sponsors\scheels.png" alt="">
+						<a href="http://www.scheels.com" target="_blank"><img class="img-responsive" src="images\sponsors\scheels.png" alt="Scheels"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<img class="img-responsive" src="images\sponsors\stumps.png" alt="">
+						<a href="http://www.stumpshotolives.com" target="_blank"><img class="img-responsive" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<img class="img-responsive" src="images\sponsors\prestige.png" alt="">
+						<a href="http://www.prestigeautocorp.com" target="_blank"><img class="img-responsive" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<img class="img-responsive" src="images\sponsors\dining.png" alt="">
+						<img class="img-responsive" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<img class="img-responsive" src="images\sponsors\pepsi.png" alt="">
+						<a href="http://www.pepsi.com/" target="_blank"><img class="img-responsive" src="images\sponsors\pepsi.png" alt="Pepsi"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 			</div> <!-- #row  -->
 		</div> <!-- #container -->
