--- a/sponsors.html
+++ b/sponsors.html
@@ -88,7 +88,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<h2 class="headers">Sponsors</h2>
+					<h2 class="headers"><b>Sponsors</b></h2>
 				</div> <!-- #col-lg-12 -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 						<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
@@ -109,10 +109,13 @@
 						<a href="http://www.prestigeautocorp.com" target="_blank"><img class="img-responsive" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<img class="img-responsive" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
+						<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 						<a href="http://www.pepsi.com/" target="_blank"><img class="img-responsive" src="images\sponsors\pepsi.png" alt="Pepsi"></a>
+				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+						<a href="http://www.eauclaireford.com/" target="_blank"><img class="img-responsive" src="images\sponsors\ford.png" alt="Ford"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 			</div> <!-- #row  -->
 		</div> <!-- #container -->
