--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" /> </a>
+          <img src="images/logo2.png" /> </a>
         <!-- Logo top aligns with navbar text top. -->
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -136,7 +136,7 @@
     <div class="text-center">
       </br>
       <h1 class="headers">3rd Annual Jigs Up Ice Fishing Contest</h1>
-        <h5 class="headers">Presented by Blugold Recreation, Blugold Booster Club, and the Lake Wissota Lions Club</h5>
+        <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
       </br>
     </div>
   </section>
@@ -163,8 +163,8 @@
           <h3 class="headers">New This Year:</h3>
           <h4> Scheels Kids Ice Fishing Clinic</h4>
           <blockquote>
-Scheels Kids Klub will offer an ice fishing clinic at Scheels on Friday, February 12. Space is limited, sign up at
- Scheels. Learn new skills and try them out on the ice on February 13 in the Kid’s Klub area. Gear provided, free for children to participate, must purchase a Fish ticket to register a fish.
+Scheels Kids Klub will offer an ice fishing clinic at Scheels on Friday, February 12, at 6pm. Space is limited, sign up at
+ Scheels. Learn new skills and try them out on the ice on February 13 at 12noon in the Kid’s Klub area. Gear and lunch  provided for the kids, free for children to participate, must purchase a Fish ticket to register a fish.
 
           </blockquote>
 
@@ -172,7 +172,7 @@ Scheels Kids Klub will offer an ice fishing clinic at Scheels on Friday, Februar
 							apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.</i>
 <br />
 <br />
-            <a class="rules" target="_blank" href="assets/rules.pdf">Click here for the rules</a></p>
+            <a class="rules" target="_blank" href="images/rules.pdf">Rules</a>  </p>
         </div>
         <!-- #col-sm-6  -->
         <div class="col-sm-6">
@@ -206,7 +206,7 @@ Scheels Kids Klub will offer an ice fishing clinic at Scheels on Friday, Februar
       <br />
     </p>
     <div class="buildn">
-      /build 0.9.1
+      /build 0.8.6.0
     </div>
   </div>
 
