Temp Fix to Sponsors

--- a/sponsors.html
+++ b/sponsors.html
@@ -91,17 +91,25 @@
 					<h2 class="headers"><b>Sponsors</b></h2>
 				</div> <!-- #col-lg-12 -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+						<img class="img-responsive" src="images\sponsors\blank.png" alt=""></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 						<a href="http://www.gordyscountymarket.net" target="_blank"><img class="img-responsive" src="images\sponsors\gordys.png" alt="Gordy's County Market"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<a href="http://www.leinie.com" target="_blank"><img class="img-responsive" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 						<a href="http://www.scheels.com" target="_blank"><img class="img-responsive" src="images\sponsors\scheels.png" alt="Scheels"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+						<img class="img-responsive" src="images\sponsors\blank.png" alt=""></a>
+				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+						<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+
+				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+						<a href="http://www.leinie.com" target="_blank"><img class="img-responsive" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
+				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 						<a href="http://www.stumpshotolives.com" target="_blank"><img class="img-responsive" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
