--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <h3 class="headers">Where:</h3>
           <h4> Lake Wissota</h4>
           <blockquote>
-            <b>Weigh-In Stations:</b> The Edge Pub & Eatery and Gordy's County Market on "Little Lake Wissota"
+            <b>Weigh-In Stations:</b> The Edge Pub &amp; Eatery and Gordy's County Market on "Little Lake Wissota"
             <br />
             <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, 4pm Fish Prizes
 
@@ -163,16 +163,14 @@
           <h3 class="headers">New This Year:</h3>
           <h4> Scheels Kids Ice Fishing Clinic</h4>
           <blockquote>
-Scheels Kids Klub will offer an ice fishing clinic at Scheels on Friday, February 12, at 6pm. Space is limited, sign up at
- Scheels. Learn new skills and try them out on the ice on February 13 at 12noon in the Kid’s Klub area. Gear and lunch  provided for the kids, free for children to participate, must purchase a Fish ticket to register a fish.
-
+            Scheels Kids Klub will offer an ice fishing clinic at Scheels on Friday, February 12, at 6pm. Space is limited, sign up at
+            Scheels. Learn new skills and try them out on the ice on February 13 at 12noon in the Kid’s Klub area. Gear and lunch  provided for the kids, free for children to participate, must purchase a Fish ticket to register a fish.
           </blockquote>
-
           <p><i>The Wissota Lions Club will have food and beverages available on the ice. All state regulations and bag limits
-							apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.</i>
-<br />
-<br />
-            <a class="rules" target="_blank" href="images/rules.pdf">Rules</a>  </p>
+							  apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.</i>
+          <br />
+          <br />
+          <a target="_blank" href="assets/rules.pdf" <button class="btn1">Click here to see the rules</button></a>
         </div>
         <!-- #col-sm-6  -->
         <div class="col-sm-6">
