--- a/sponsors.html
+++ b/sponsors.html
@@ -90,17 +90,11 @@
 				<div class="col-lg-12">
 					<h2 class="headers"><b>Sponsors</b></h2>
 				</div> <!-- #col-lg-12 -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<img class="img-responsive" src="images\sponsors\blank.png" alt=""></a>
+				<div class="col-lg-6 col-md-8 col-xs-12 thumb">
+						<a href="http://www.gordyscountymarket.net" target="_blank"><img class="img-responsive" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<a href="http://www.gordyscountymarket.net" target="_blank"><img class="img-responsive" src="images\sponsors\gordys.png" alt="Gordy's County Market"></a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<a href="http://www.scheels.com" target="_blank"><img class="img-responsive" src="images\sponsors\scheels.png" alt="Scheels"></a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-						<img class="img-responsive" src="images\sponsors\blank.png" alt=""></a>
+				<div class="col-lg-6 col-md-8 col-xs-12 thumb">
+						<a href="http://www.scheels.com" target="_blank"><img class="img-responsive" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 						<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
@@ -124,6 +118,12 @@
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 						<a href="http://www.eauclaireford.com/" target="_blank"><img class="img-responsive" src="images\sponsors\ford.png" alt="Ford"></a>
+				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+						<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive" src="images\sponsors\edge.png" alt="Ford"></a>
+				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+						<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="img-responsive" src="images\sponsors\view.png" alt="Ford"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 			</div> <!-- #row  -->
 		</div> <!-- #container -->
