Fixed Contacts Page Content

--- a/contact.html
+++ b/contact.html
@@ -124,89 +124,84 @@
 				<tr>
 					<th>Name</th>
 					<th>Organization</th>
-		</tr>
+				</tr>
 			</thead>
 			<tbody>
+				<tr>
+					<td>Shari Breed</td>
+					<td>Bluegold Recreation</td>
+					</tr>
 				<tr>
 					<td>Tammy Brunschmid</td>
 					<td>Blugold Recreation</td>
 					</tr>
-					<tr>
-						<td>Bill Cunningham</td>
-						<td>Wissota Lions Club</td>
-						</tr>
-						<tr>
-							<td>Chuck Daly</td>
-							<td>Wissota Lions Club</td>
-							</tr>
-							<tr>
-								<td>Ben Halder</td>
-								<td>Blugold Athletics</td>
-								</tr>
-								<tr>
-									<td>Andy Jepsen</td>
-									<td>Blugold Recreation</td>
-									</tr>
-									<tr>
-										<td>Jill Millis</td>
-										<td>Blugold Athletics</td>
-										</tr>
-										<tr>
-											<td>Carl Mothes</td>
-											<td>Wissota Lions Club</td>
-											</tr>
-											<tr>
-												<td>Sheryl Poirier</td>
-												<td>Blugold Recreation</td>
-												</tr>
-												<tr>
-													<td>Dave Prescher</td>
-													<td>Wissota Lions Club</td>
-													</tr>
-													<tr>
-														<td>Dave Prescher</td>
-														<td>Wissota Lions Club</td>
-														</tr>
-														<tr>
-															<td>Dan Schumacher</td>
-															<td>Blugold Athletics</td>
-															</tr>
-															<tr>
-																<td>Troy Terhark</td>
-																<td>Blugold Recreation</td>
-																</tr>
-																<tr>
-																	<td>Al Wiberg</td>
-																	<td>Blugold Recreation</td>
-																	</tr>
-
-
-
-						          </tbody>
-						        </table>
-						</div>
-<br />
-
+				<tr>
+					<td>Bill Cunningham</td>
+					<td>Wissota Lions Club</td>
+				</tr>
+				<tr>
+					<td>Chuck Daly</td>
+					<td>Wissota Lions Club</td>
+				</tr>
+				<tr>
+					<td>Ben Halder</td>
+					<td>Blugold Athletics</td>
+				</tr>
+				<tr>
+					<td>Andy Jepsen</td>
+					<td>Blugold Recreation</td>
+				</tr>
+				<tr>
+					<td>Jill Millis</td>
+					<td>Blugold Athletics</td>
+				</tr>
+				<tr>
+					<td>Carl Mothes</td>
+					<td>Wissota Lions Club</td>
+				</tr>
+				<tr>
+					<td>Sheryl Poirier</td>
+					<td>Blugold Recreation</td>
+				</tr>
+				<tr>
+					<td>Dave Prescher</td>
+					<td>Wissota Lions Club</td>
+				</tr>
+				<tr>
+					<td>Dan Schumacher</td>
+					<td>Blugold Athletics</td>
+				</tr>
+				<tr>
+					<td>Troy Terhark</td>
+					<td>Blugold Recreation</td>
+				</tr>
+				<tr>
+					<td>Jan Thorsen</td>
+					<td>Blugold Recreation</td>
+				</tr>
+				<tr>
+					<td>Al Wiberg</td>
+					<td>Blugold Recreation</td>
+				</tr>
+  		</tbody>
+  	</table>
+	</div>
+	<br />
 					</div> <!-- #row -->
 				</form> <!-- #contact_form  -->
 			</div>  <!-- #contactForm  -->
 		</div> <!-- #container  -->
-<br />
-<br />
-<br />
-<br />
-
-
-
+	<br />
+	<br />
+	<br />
+	<br />
 	</section>  <!-- #contactForm  -->
-
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
  </body>
-
 
  <!-- Footer -->
  <footer >
