Changed Gordy's County Market to Gordy's Market

--- a/directions.html
+++ b/directions.html
@@ -43,7 +43,6 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
-
       <div class="navbar-header">
         <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
           <span class="sr-only">Toggle navigation</span>
@@ -128,7 +127,7 @@
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
           <div class="panel-heading">
             <h4 class="panel-title">
-              The Edge Pub & Eatery
+              The Edge Pub &amp; Eatery
             </h4>
             <span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
           </div>
@@ -159,7 +158,7 @@
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
           <div class="panel-heading">
             <h4 class="panel-title">
-              Gordy's County Market
+              Gordy's Market
             </h4>
             <span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
           </div>
