--- a/tickets.html
+++ b/tickets.html
@@ -121,12 +121,12 @@
 					<ul class="list">
 						<li>Scheels</li>
 						<li>The View at Lake Wissota</li>
-						<li>The Edge Pub & Eatery on Lake Wissota</li>
-						<li>Gordy’s County Market select locations*</li>
+						<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
+						<li>Gordy’s Market select locations*</li>
 						<li>UWEC McPhee Information Office, 8:00am-4:30pm, Monday - Friday</h3></li>
 						<li>UWEC Hilltop Recreation Center Office, 8:00am-4:30pm, Monday - Friday</h3></li>
 					</ul>
-					*Gordy’s County Market Store Locations:  Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC), Hamilton (EC), Clairemont (EC), Rice Lake, Ladysmith, Cornell, Chetek, Augusta
+					*Gordy’s Market Store Locations:  Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC), Hamilton (EC), Clairemont (EC), Rice Lake, Ladysmith, Cornell, Chetek, Augusta
 		<br />
 	<br />
 	<br />
