--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <!-- #carousel  -->
     <div class="text-center">
       </br>
-      <h1 class="headers">3rd Annual Jigs Up Ice Fishing Contest</h1>
+      <h1 class="headers">3rd Annual Jigs Up Blugold Ice Fishing Contest</h1>
         <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
       </br>
     </div>
