Build Number Update for Gordy's Update

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <h3 class="headers">Where:</h3>
           <h4> Lake Wissota</h4>
           <blockquote>
-            <b>Weigh-In Stations:</b> The Edge Pub &amp; Eatery and Gordy's County Market on "Little Lake Wissota"
+            <b>Weigh-In Stations:</b> The Edge Pub &amp; Eatery and Gordy's Market on "Little Lake Wissota"
             <br />
             <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, 4pm Fish Prizes
 
@@ -204,7 +204,7 @@
       <br />
     </p>
     <div class="buildn">
-      /build 0.8.9.5
+      /build 0.8.9.6
     </div>
   </div>
 
