Updated Kids Klub on Index and added things to schedule
I added the extra content from Sheryl to the index page, as well as
added Friday times to the Schedule.

--- a/schedule.html
+++ b/schedule.html
@@ -123,6 +123,27 @@
           </thead>
           <tbody>
             <tr>
+              <td><b>Friday, February 12th</b></td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>6:00PM</td>
+              <td>Kids Klub ice fishing clinic at Scheels, sign up in advance at Scheels</td>
+            </tr>
+
+            <tr>
+              <td>12:00PM</td>
+              <td>Kids Klub event on the ice in front of the View</td>
+            </tr>
+
+            <tr>
+              <td><b>Saturday, February 13th</b></td>
+              <td></td>
+            </tr>
+
+
+            <tr>
               <td>7:00AM</td>
               <td>Contest Begins! No need to pre-register, just head out to the ice and come in when you have a fish to register</td>
             </tr>
