--- a/index.html
+++ b/index.html
@@ -163,8 +163,10 @@
           <h3 class="headers">New This Year:</h3>
           <h4> Scheels Kids Ice Fishing Clinic</h4>
           <blockquote>
-            Scheels Kids Klub will offer an ice fishing clinic at Scheels on Friday, February 12, at 6pm. Space is limited, sign up at
-            Scheels. Learn new skills and try them out on the ice on February 13 at 12noon in the Kid’s Klub area. Gear and lunch  provided for the kids, free for children to participate, must purchase a Fish ticket to register a fish.
+            Scheels will host a Kids Klub ice fishing clinic at their store on Friday, February 12, at 6pm. Space is limited; sign up at Scheels.
+            Learn new skills and try them out on the ice Saturday, February 13 at 12pm in front of The View in the Kids Klub area. Holes will be
+            drilled; gear and lunch will be provided for the kids.  This event is FREE for kids up to age 12, prizes will be awarded for fish caught.
+            Any fish caught in the Kid’s Club area will be marked and will not be eligible to register in the Jig’s Up Blugold Ice Fishing Contest.
           </blockquote>
           <p><i>The Wissota Lions Club will have food and beverages available on the ice. All state regulations and bag limits
 							  apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.</i>
