Fixed Sponsor Page and Added People to Committee List

--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,11 @@
 				<tr>
 					<td>Tammy Brunschmid</td>
 					<td>Blugold Recreation</td>
-					</tr>
+				</tr>
+				<tr>
+					<td>Maggie Cook</td>
+					<td>Gordy's Market</td>
+				</tr>
 				<tr>
 					<td>Bill Cunningham</td>
 					<td>Wissota Lions Club</td>
@@ -145,15 +149,19 @@
 				</tr>
 				<tr>
 					<td>Ben Halder</td>
-					<td>Blugold Athletics</td>
+					<td>UWEC Athletics</td>
 				</tr>
 				<tr>
 					<td>Andy Jepsen</td>
 					<td>Blugold Recreation</td>
 				</tr>
 				<tr>
+					<td>Jamie Kane</td>
+					<td>Scheels</td>
+				</tr>
+				<tr>
 					<td>Jill Millis</td>
-					<td>Blugold Athletics</td>
+					<td>UWEC Athletics</td>
 				</tr>
 				<tr>
 					<td>Carl Mothes</td>
@@ -168,8 +176,12 @@
 					<td>Wissota Lions Club</td>
 				</tr>
 				<tr>
+					<td>Matt Selvig</td>
+					<td>Gordy's Market</td>
+				</tr>
+				<tr>
 					<td>Dan Schumacher</td>
-					<td>Blugold Athletics</td>
+					<td>UWEC Athletics</td>
 				</tr>
 				<tr>
 					<td>Troy Terhark</td>
