--- a/sponsors.html
+++ b/sponsors.html
@@ -88,7 +88,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<h2 class="headers"><b>Sponsors</b></h2>
+					<h2 class="headers"><b>Title Sponsors</b></h2>
 				</div> <!-- #col-lg-12 -->
 				<div class="col-lg-6 col-md-8 col-xs-12 thumb">
 						<a href="http://www.gordyscountymarket.net" target="_blank"><img class="img-responsive" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
@@ -96,6 +96,7 @@
 				<div class="col-lg-6 col-md-8 col-xs-12 thumb">
 						<a href="http://www.scheels.com" target="_blank"><img class="img-responsive" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+				<h2 class="headers"><b>Sponsors</b></h2>
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 						<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
