Replaced Logo with Blue Version and Created logo for Rec+Lions+Athletics

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
+          <li><a href="index.html">Home</a></li>
           <li class="dropdown">
             <a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -136,7 +137,11 @@
     <div class="text-center">
       </br>
       <h1 class="headers">3rd Annual Jigs Up Blugold Ice Fishing Contest</h1>
-        <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
+      <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
+      <img src="images/3logo.png"</img>
+      <div class="horizbar">
+      </div>
+      </br>
       </br>
     </div>
   </section>
