--- a/directions.html
+++ b/directions.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="UW-Eau Claire Blugold and Lake Wissota Lions Club ice fishing contest on Lake Wissota, Wisconsin.">
+  <meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
+  <meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Jigs Up | Directions</title>
-
   <!-- Bootstrap -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,13 +51,15 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" /> </a>
+          <img src="images/logo.png" />
+        </a>
         <!-- Logo top aligns with navbar text top. -->
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
+          <li><a href="index.html">Home</a></li>
           <li class="dropdown">
             <a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -97,17 +99,16 @@
   </nav>
 </head>
 
-
 <body>
-  <br />
-  <br />
-  <br />
+  <br /> <!-- BREAK -->
+  <br /> <!-- BREAK -->
+  <br /> <!-- BREAK -->
   <section id="directionsHeader">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
           <h2 class="headers">Directions</h2>
-          <br />
+          <br /> <!-- BREAK -->
         </div>
         <!-- #col-sm-8  -->
       </div>
@@ -115,14 +116,8 @@
     </div>
     <!-- #container  -->
   </section>
-
-
-
   <div class="container">
-
-
     <div class="panel-group col-md-6" id="accordion">
-
       <div class="panel panel-default ">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
           <div class="panel-heading">
@@ -171,11 +166,8 @@
         </div>
       </div>
     </div>
-
     <div class = "col-md-6">
-
       <img src="images/Map.png" class="img-responsive" alt="Lake Wissota Map">
-
     </div>
   </div>
 
@@ -183,9 +175,22 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+</body>
 
-
-  </footer>
-  <!--End footer-->
-
+<footer>
+  <div class="footer hidden-xs">
+    <br /> <!-- BREAK -->
+    <p>
+      Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+      <br /> <!-- BREAK -->
+    </p>
+  </div>
+  <div class="footer visible-xs">
+    <br /> <!-- BREAK -->
+    <p class="small-footer">
+      Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+      <br /> <!-- BREAK -->
+    </p>
+  </div>
+</footer>
 </html>
