--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="UW-Eau Claire Blugold and Lake Wissota Lions Club ice fishing contest on Lake Wissota, Wisconsin.">
-   <meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="UW-Eau Claire Blugold and Lake Wissota Lions Club ice fishing contest on Lake Wissota, Wisconsin.">
+  <meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
   <meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
-
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Jigs Up | Home</title>
-
   <!-- Bootstrap -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
@@ -45,7 +42,6 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
-
       <div class="navbar-header">
         <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
           <span class="sr-only">Toggle navigation</span>
@@ -54,7 +50,8 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" /> </a>
+          <img src="images/logo.png" />
+        </a>
         <!-- Logo top aligns with navbar text top. -->
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -100,7 +97,6 @@
     <!-- /.container -->
   </nav>
 </head>
-
 <body>
   <section id="Slider">
     <div id="carousel" class="carousel slide" data-ride="carousel">
@@ -127,7 +123,6 @@
         </div>
       </div>
       <!-- #carousel-inner  -->
-
       <a class="left carousel-control" href="#carousel-example" data-slide="prev">
       </a>
       <a class="right carousel-control" href="#carousel-example" data-slide="next">
@@ -135,14 +130,14 @@
     </div>
     <!-- #carousel  -->
     <div class="text-center">
-      </br>
+      </br> <!-- BREAK -->
       <h1 class="headers">3rd Annual Jigs Up Blugold Ice Fishing Contest</h1>
       <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
       <img src="images/3logo.png"</img>
       <div class="horizbar">
       </div>
-      </br>
-      </br>
+      <br /> <!-- BREAK -->
+      <br /> <!-- BREAK -->
     </div>
   </section>
   <section id="content">
@@ -151,8 +146,8 @@
         <div class="col-sm-6">
           <h3 class="headers">When:</h3>
           <h4>Saturday, February 13, 2016; 7am-2pm</h4>
-          <br />
-          <br />
+          <br /> <!-- BREAK -->
+          <br /> <!-- BREAK -->
           <blockquote>
             No need to check in, will-call tickets purchased on-line will be available for pick up at The View starting at 6:30am.
           </blockquote>
@@ -160,28 +155,33 @@
           <h4> Lake Wissota</h4>
           <blockquote>
             <b>Weigh-In Stations:</b> The Edge Pub &amp; Eatery and Gordy's Market on "Little Lake Wissota"
-            <br />
+            <br /> <!-- BREAK -->
             <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, 4pm Fish Prizes
-
           </blockquote>
 
           <h3 class="headers">New This Year:</h3>
           <h4> Scheels Kids Ice Fishing Clinic</h4>
+
           <blockquote>
             Scheels will host a Kids Klub ice fishing clinic at their store on Friday, February 12, at 6pm. Space is limited; sign up at Scheels.
             Learn new skills and try them out on the ice Saturday, February 13 at 12pm in front of The View in the Kids Klub area. Holes will be
             drilled; gear and lunch will be provided for the kids.  This event is FREE for kids up to age 12, prizes will be awarded for fish caught.
             Any fish caught in the Kid’s Club area will be marked and will not be eligible to register in the Jig’s Up Blugold Ice Fishing Contest.
           </blockquote>
-          <p><i>The Wissota Lions Club will have food and beverages available on the ice. All state regulations and bag limits
-							  apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.</i>
-          <br />
-          <br />
+          <p>
+            <i>
+              The Wissota Lions Club will have food and beverages available on the ice. All state regulations and bag limits
+						  apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest
+              includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.
+            </i>
+          </p>
+          <br /> <!-- BREAK -->
+          <br /> <!-- BREAK -->
           <a target="_blank" href="assets/rules.pdf" <button class="btn1">Click here to see the rules</button></a>
         </div>
         <!-- #col-sm-6  -->
         <div class="col-sm-6">
-          <br />
+          <br /> <!-- BREAK -->
           <div class="videowrapper">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/UsUAM8JMG4c?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
@@ -191,10 +191,10 @@
       <!-- #row  -->
     </div>
     <!-- #container  -->
-    <br />
-    <br />
-    <br />
-    <br />
+    <br /> <!-- BREAK -->
+    <br /> <!-- BREAK -->
+    <br /> <!-- BREAK -->
+    <br /> <!-- BREAK -->
   </section>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -203,26 +203,23 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
 
-<!-- Footer -->
 <footer>
   <div class="footer hidden-xs">
-    <br />
-    <p> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-      <br />
+    <br /> <!-- BREAK -->
+    <p>
+      Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+      <br /> <!-- BREAK -->
     </p>
     <div class="buildn">
-      /build 0.8.9.7
+      /build 0.8.9.9
     </div>
   </div>
-
   <div class="footer visible-xs">
-    <br />
-    <p class="small-footer"> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-      <br />
+    <br /> <!-- BREAK -->
+    <p class="small-footer">
+      Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+      <br /> <!-- BREAK -->
     </p>
-
   </div>
 </footer>
-<!--End footer-->
-
 </html>
