--- a/results.html
+++ b/results.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="UW-Eau Claire Blugold and Lake Wissota Lions Club ice fishing contest on Lake Wissota, Wisconsin.">
+  <meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
+  <meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Jigs Up | Results</title>
-
   <!-- Bootstrap -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
@@ -41,7 +43,6 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
-
       <div class="navbar-header">
         <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
           <span class="sr-only">Toggle navigation</span>
@@ -50,13 +51,15 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" /> </a>
+          <img src="images/logo.png" />
+        </a>
         <!-- Logo top aligns with navbar text top. -->
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
+          <li><a href="index.html">Home</a></li>
           <li class="dropdown">
             <a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -96,16 +99,15 @@
   </nav>
 </head>
 
-
 <body>
   <section id="content">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <br />
-          <br />
-          <br />
-          <br />
+          <br /> <!-- BREAK -->
+          <br /> <!-- BREAK -->
+          <br /> <!-- BREAK -->
+          <br /> <!-- BREAK -->
           <h2 class="headers">2015 Fish Ticket Results</h2>
         </div>
         <!-- #col-sm-6 -->
@@ -557,11 +559,6 @@
               <td>Walleye</td>
               <td>Ice combo bag</td>
             </tr>
-
-
-
-
-
           </tbody>
         </table>
       </div>
@@ -575,7 +572,6 @@
               <th>Prize #</th>
               <th>Name</th>
               <th>Prize</th>
-
             </tr>
           </thead>
           <tbody>
@@ -737,22 +733,22 @@
             <tr>
               <td>32</td>
               <td>John Rasmue</td>
-              <td>Green - Packer Bag w/ water bottle & hat</td>
+              <td>Green - Packer Bag w/ water bottle &amp; hat</td>
             </tr>
             <tr>
               <td>33</td>
               <td>Pat Sterling</td>
-              <td>Pink - Packer Bag w/ water bottle & hat</td>
+              <td>Pink - Packer Bag w/ water bottle &amp; hat</td>
             </tr>
             <tr>
               <td>34</td>
               <td>Jean Arenson</td>
-              <td>Dangler - Trip Up & Quick Grab Rod Holder</td>
+              <td>Dangler - Trip Up &amp; Quick Grab Rod Holder</td>
             </tr>
             <tr>
               <td>35</td>
               <td>Dustin Kalien</td>
-              <td>Dangler - Trip Up & Quick Grab Rod Holder</td>
+              <td>Dangler - Trip Up &amp; Quick Grab Rod Holder</td>
             </tr>
             <tr>
               <td>36</td>
@@ -769,21 +765,14 @@
               <td>Pete Nichols</td>
               <td>$30 The Edge Certificate</td>
             </tr>
-
-
-
-
-
-
-
           </tbody>
         </table>
       </div>
       <!-- #table-responsive -->
-      <br />
-      <br />
-      <br />
-      <br />
+      <br /> <!-- BREAK -->
+      <br /> <!-- BREAK -->
+      <br /> <!-- BREAK -->
+      <br /> <!-- BREAK -->
   </section>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -792,25 +781,20 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
 
-
-<!-- Footer -->
 <footer>
   <div class="footer hidden-xs">
-    <br />
-    <p> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-      <br />
+    <br /> <!-- BREAK -->
+    <p>
+      Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+      <br /> <!-- BREAK -->
     </p>
-    <br />
   </div>
-
   <div class="footer visible-xs">
-    <br />
-    <p class="small-footer"> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-      <br />
+    <br /> <!-- BREAK -->
+    <p class="small-footer">
+      Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+      <br /> <!-- BREAK -->
     </p>
-
   </div>
 </footer>
-<!--End footer-->
-
 </html>
