--- a/contact.html
+++ b/contact.html
@@ -1,106 +1,121 @@
  <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Jigs Up | Contact</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="UW-Eau Claire Blugold and Lake Wissota Lions Club ice fishing contest on Lake Wissota, Wisconsin.">
+  <meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
+  <meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Jigs Up | Contact</title>
+  <!-- Bootstrap -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
 
-		<!-- Bootstrap -->
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-		<link href="css/custom.css" rel="stylesheet">
-
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
-		<!-- FAVICON -->
-		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-		<link rel="manifest" href="favicon/manifest.json">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-		<meta name="theme-color" content="#ffffff">
+  <!-- FAVICON -->
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 
-			<nav class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container">
-				<!-- Brand and toggle get grouped for better mobile display -->
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">
+          <img src="images/logo.png" />
+        </a>
+        <!-- Logo top aligns with navbar text top. -->
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
 
-				<div class="navbar-header">
-					<button class="navbar-toggle" data-target=
-					"#bs-example-navbar-collapse-1" data-toggle="collapse" type=
-					"button"><span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span> <span class="icon-bar"></span>
-					<span class="icon-bar"></span></button>
-					<a class="navbar-brand" href="index.html"> <img src="images/logo.png" /> </a> <!-- Logo top aligns with navbar text top. -->
-				</div>
-				<!-- Collect the nav links, forms, and other content for toggling -->
-
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li class="dropdown">
-							<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="directions.html">Directions</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="schedule.html">Schedule</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="prizes.html">Prizes</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="sponsors.html">Sponsors</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="results.html">Results</a></li>
-							</ul>
-						</li>
-						<li class="navcol"><a href="tickets.html">Tickets</a></li>
-						<li class="navcol"><a href="contact.html">Contact</a></li>
-						<li class="social-media"><a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522"> <img src="images/facebook.png" class ="fbook"</img></a></li>
-						<li><a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation"> <img src="images/twitter.png" class="twitter"</img></a></li>
-						<li><a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/"> <img src="images/instagram.png" class="fbook"</img></a></li>
-					</ul>
-				</div>
-				<!-- /.navbar-collapse -->
-			</div>
-			<!-- /.container -->
-		</nav>
-	</head>
-
-
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="index.html">Home</a></li>
+          <li class="dropdown">
+            <a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="directions.html">Directions</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="schedule.html">Schedule</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="prizes.html">Prizes</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="sponsors.html">Sponsors</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="results.html">Results</a></li>
+            </ul>
+          </li>
+          <li class="navcol"><a href="tickets.html">Tickets</a></li>
+          <li class="navcol"><a href="contact.html">Contact</a></li>
+          <li class="social-media">
+            <a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
+              <img src="images/facebook.png" class="fbook" </img>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+              <img src="images/twitter.png" class="twitter" </img>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+              <img src="images/instagram.png" class="fbook" </img>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
+</head>
 <body>
-	<br />
-	<br />
-	<br />
-	<br />
+	<br /> <!-- BREAK -->
+	<br /> <!-- BREAK -->
+	<br /> <!-- BREAK -->
+	<br /> <!-- BREAK -->
 	<section id="contactForm">
 		<div class= "container">
-			<div class="contactForm"> <!-- SPACING ISSUES WITH BUTTON AND HEADER -->
+			<div class="contactForm">
 				<form id="contact_form" action="http://formspree.io/recreation@uwec.edu" method="POST" onsubmit="return validateForm();" enctype="multipart/form-data">
 					<div class="row">
 						<div class="col-md-6">
 							<h3 class="headers">Contact Us!</h3>
-							<br /> <br />
+							<br /> <!-- BREAK -->
+              <br /> <!-- BREAK -->
 							<label class="required" for="name">Your name:</label><br />
 							<input required id="name" name="name" type="text" value="" size="30" /><br />
 
-
 							<label class="required" for="email">Your email:</label><br />
 							<input required type="email"  id="email" name="email" type="text" value="" size="30" /><br />
-
 
 							<label for="phone">Your phone number:</label><br />
 							<input  id="phone" name="phone" type="text" value="" size="30" /><br />
@@ -109,104 +124,104 @@
 							<textarea required id="message" name="message" rows="7" cols="60"></textarea><br />
 
 							<button type="submit" class="btn btn-primary" value="Send">Send</button>
-
 						</div> <!-- #col  -->
-
 						<div class="col-md-6">
-<div class="visible-sm visible-xs">
-	<br />
-</div>
-	<h3 class="headers">Committee Members</h3>
-<br /> <br />
-	<div class="table-responsive">
-		<table class="table">
-			<thead>
-				<tr>
-					<th>Name</th>
-					<th>Organization</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Shari Breed</td>
-					<td>Bluegold Recreation</td>
-					</tr>
-				<tr>
-					<td>Tammy Brunschmid</td>
-					<td>Blugold Recreation</td>
-				</tr>
-				<tr>
-					<td>Maggie Cook</td>
-					<td>Gordy's Market</td>
-				</tr>
-				<tr>
-					<td>Bill Cunningham</td>
-					<td>Wissota Lions Club</td>
-				</tr>
-				<tr>
-					<td>Chuck Daly</td>
-					<td>Wissota Lions Club</td>
-				</tr>
-				<tr>
-					<td>Ben Halder</td>
-					<td>UWEC Athletics</td>
-				</tr>
-				<tr>
-					<td>Andy Jepsen</td>
-					<td>Blugold Recreation</td>
-				</tr>
-				<tr>
-					<td>Jamie Kane</td>
-					<td>Scheels</td>
-				</tr>
-				<tr>
-					<td>Jill Millis</td>
-					<td>UWEC Athletics</td>
-				</tr>
-				<tr>
-					<td>Carl Mothes</td>
-					<td>Wissota Lions Club</td>
-				</tr>
-				<tr>
-					<td>Sheryl Poirier</td>
-					<td>Blugold Recreation</td>
-				</tr>
-				<tr>
-					<td>Dave Prescher</td>
-					<td>Wissota Lions Club</td>
-				</tr>
-				<tr>
-					<td>Matt Selvig</td>
-					<td>Gordy's Market</td>
-				</tr>
-				<tr>
-					<td>Dan Schumacher</td>
-					<td>UWEC Athletics</td>
-				</tr>
-				<tr>
-					<td>Troy Terhark</td>
-					<td>Blugold Recreation</td>
-				</tr>
-				<tr>
-					<td>Jan Thorsen</td>
-					<td>Blugold Recreation</td>
-				</tr>
-				<tr>
-					<td>Al Wiberg</td>
-					<td>Blugold Recreation</td>
-				</tr>
-  		</tbody>
-  	</table>
-	</div>
-	<br />
+              <div class="visible-sm visible-xs">
+  	             <br /> <!-- BREAK -->
+              </div>
+  	          <h3 class="headers">Committee Members</h3>
+              <br /> <!-- BREAK -->
+              <br /> <!-- BREAK -->
+            	<div class="table-responsive">
+            		<table class="table">
+            			<thead>
+            				<tr>
+            					<th>Name</th>
+            					<th>Organization</th>
+            				</tr>
+            			</thead>
+            			<tbody>
+            				<tr>
+            					<td>Shari Breed</td>
+            					<td>Bluegold Recreation</td>
+            					</tr>
+            				<tr>
+            					<td>Tammy Brunschmid</td>
+            					<td>Blugold Recreation</td>
+            				</tr>
+            				<tr>
+            					<td>Maggie Cook</td>
+            					<td>Gordy's Market</td>
+            				</tr>
+            				<tr>
+            					<td>Bill Cunningham</td>
+            					<td>Wissota Lions Club</td>
+            				</tr>
+            				<tr>
+            					<td>Chuck Daly</td>
+            					<td>Wissota Lions Club</td>
+            				</tr>
+            				<tr>
+            					<td>Ben Halder</td>
+            					<td>UWEC Athletics</td>
+            				</tr>
+            				<tr>
+            					<td>Andy Jepsen</td>
+            					<td>Blugold Recreation</td>
+            				</tr>
+            				<tr>
+            					<td>Jamie Kane</td>
+            					<td>Scheels</td>
+            				</tr>
+            				<tr>
+            					<td>Jill Millis</td>
+            					<td>UWEC Athletics</td>
+            				</tr>
+            				<tr>
+            					<td>Carl Mothes</td>
+            					<td>Wissota Lions Club</td>
+            				</tr>
+            				<tr>
+            					<td>Sheryl Poirier</td>
+            					<td>Blugold Recreation</td>
+            				</tr>
+            				<tr>
+            					<td>Dave Prescher</td>
+            					<td>Wissota Lions Club</td>
+            				</tr>
+            				<tr>
+            					<td>Matt Selvig</td>
+            					<td>Gordy's Market</td>
+            				</tr>
+            				<tr>
+            					<td>Dan Schumacher</td>
+            					<td>UWEC Athletics</td>
+            				</tr>
+            				<tr>
+            					<td>Troy Terhark</td>
+            					<td>Blugold Recreation</td>
+            				</tr>
+            				<tr>
+            					<td>Jan Thorsen</td>
+            					<td>Blugold Recreation</td>
+            				</tr>
+            				<tr>
+            					<td>Al Wiberg</td>
+            					<td>Blugold Recreation</td>
+            				</tr>
+              		</tbody>
+              	</table>
+            	</div>
+            </div> <!--#col-md-6 -->
+	          <br /> <!-- BREAK -->
 					</div> <!-- #row -->
 				</form> <!-- #contact_form  -->
 			</div>  <!-- #contactForm  -->
 		</div> <!-- #container  -->
-	<br />
-	<br />
-	<br />
-	<br />
+	<br /> <!-- BREAK -->
+	<br /> <!-- BREAK -->
+	<br /> <!-- BREAK -->
+	<br /> <!-- BREAK -->
 	</section>  <!-- #contactForm  -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -215,20 +230,20 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
  </body>
 
- <!-- Footer -->
- <footer >
- 	<div class="footer hidden-xs">
-  		<br />
-  		<p> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-        <br /></p>
-  		<br />
-	</div>
-
-	<div class="footer visible-xs">
-    	<br />
-        <p class="small-footer"> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-        <br /></p>
-	</div>
+<footer>
+   <div class="footer hidden-xs">
+     <br /> <!-- BREAK -->
+     <p>
+       Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+       <br /> <!-- BREAK -->
+     </p>
+   </div>
+   <div class="footer visible-xs">
+     <br /> <!-- BREAK -->
+     <p class="small-footer">
+       Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+       <br /> <!-- BREAK -->
+     </p>
+   </div>
 </footer>
-<!--End footer-->
 </html>
