--- a/tickets.html
+++ b/tickets.html
@@ -1,164 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Jigs Up | Tickets</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="UW-Eau Claire Blugold and Lake Wissota Lions Club ice fishing contest on Lake Wissota, Wisconsin.">
+  <meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
+  <meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Jigs Up | Tickets</title>
+  <!-- Bootstrap -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
 
-		<!-- Bootstrap -->
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-		<link href="css/custom.css" rel="stylesheet">
-
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
-		<!-- FAVICON -->
-		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-		<link rel="manifest" href="favicon/manifest.json">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-		<meta name="theme-color" content="#ffffff">
+  <!-- FAVICON -->
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 
-			<nav class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container">
-				<!-- Brand and toggle get grouped for better mobile display -->
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">
+          <img src="images/logo.png" />
+        </a>
+        <!-- Logo top aligns with navbar text top. -->
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
 
-				<div class="navbar-header">
-					<button class="navbar-toggle" data-target=
-					"#bs-example-navbar-collapse-1" data-toggle="collapse" type=
-					"button"><span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span> <span class="icon-bar"></span>
-					<span class="icon-bar"></span></button>
-					<a class="navbar-brand" href="index.html"> <img src="images/logo.png" /> </a> <!-- Logo top aligns with navbar text top. -->
-				</div>
-				<!-- Collect the nav links, forms, and other content for toggling -->
-
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li class="dropdown">
-							<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="directions.html">Directions</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="schedule.html">Schedule</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="prizes.html">Prizes</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="sponsors.html">Sponsors</a></li>
-								<li role="presentation" class="divider"></li>
-								<li><a href="results.html">Results</a></li>
-							</ul>
-						</li>
-						<li class="navcol"><a href="tickets.html">Tickets</a></li>
-						<li class="navcol"><a href="contact.html">Contact</a></li>
-						<li class="social-media"><a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522"> <img src="images/facebook.png" class ="fbook"</img></a></li>
-						<li><a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation"> <img src="images/twitter.png" class="twitter"</img></a></li>
-						<li><a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/"> <img src="images/instagram.png" class="fbook"</img></a></li>
-					</ul>
-				</div>
-				<!-- /.navbar-collapse -->
-			</div>
-			<!-- /.container -->
-		</nav>
-	</head>
-
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="index.html">Home</a></li>
+          <li class="dropdown">
+            <a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="directions.html">Directions</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="schedule.html">Schedule</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="prizes.html">Prizes</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="sponsors.html">Sponsors</a></li>
+              <li role="presentation" class="divider"></li>
+              <li><a href="results.html">Results</a></li>
+            </ul>
+          </li>
+          <li class="navcol"><a href="tickets.html">Tickets</a></li>
+          <li class="navcol"><a href="contact.html">Contact</a></li>
+          <li class="social-media">
+            <a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
+              <img src="images/facebook.png" class="fbook" </img>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+              <img src="images/twitter.png" class="twitter" </img>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+              <img src="images/instagram.png" class="fbook" </img>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
+</head>
 
 <body>
-<br />
-<br />
-<br />
-<br />
-
-<section id="content">
-	<div class="container">
-	<h2 class="headers">Register Here!</h2>
-	<br />
-	<h4 class="headers">Fish Tickets:</h4>
-	<h4>$25, one ticket required for each fish registered </h4>
-	<blockquote>
-		Over $30,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
-		of the number of fish registered so hold on to your Fish Tickets.
-	</blockquote>
-	<h4 class="headers">Raffle Tickets:</h4>
-	<h4>$5 each or $20 for 5 </h4>
-	<blockquote>
-		$7,500 in prizes including a 2015 Polaris Sportsman 4-wheeler
-	</blockquote>
-
-	<h4 class="headers">Availability:</h4>
-	<h4>Tickets available until 9pm on Friday, February 12th. Tickets will be available on the ice for $40 until 9am. </h4>
-	<blockquote>
-		Tickets purchased on-line by noon on Friday, February 5 will be mailed via USPS. After February 5 they will be available for pick up at The View starting at 6:30am on February 13.
-	</blockquote>
-
-	  <a class="rules" target="_blank" href="images/rules.pdf">Rules</a>  </p>
-	<br />
+	<br /> <!-- BREAK -->
+	<br /> <!-- BREAK -->
+	<br /> <!-- BREAK -->
+	<br /> <!-- BREAK -->
+	<section id="content">
+		<div class="container">
+		<h2 class="headers">Register Here!</h2>
+		<br />
+		<h4 class="headers">Fish Tickets:</h4>
+		<h4>$25, one ticket required for each fish registered </h4>
+		<blockquote>
+			Over $30,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
+			of the number of fish registered so hold on to your Fish Tickets.
+		</blockquote>
+		<h4 class="headers">Raffle Tickets:</h4>
+		<h4>$5 each or $20 for 5 </h4>
+		<blockquote>
+			$7,500 in prizes including a 2015 Polaris Sportsman 4-wheeler
+		</blockquote>
+		<h4 class="headers">Availability:</h4>
+		<h4>Tickets available until 9pm on Friday, February 12th. Tickets will be available on the ice for $40 until 9am. </h4>
+		<blockquote>
+			Tickets purchased on-line by noon on Friday, February 5 will be mailed via USPS. After February 5 they will be available for pick up at The View starting at 6:30am on February 13.
+		</blockquote>
+		<a class="rules" target="_blank" href="images/rules.pdf">Rules</a>  </p>
+		<br /> <!-- BREAK -->
 		<div style="width:100%; text-align:left;" >
 			<iframe src="http://www.eventbrite.com/tickets-external?eid=4653432542&ref=etckt&v=2" frameborder="0" height="250" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="no" allowtransparency="true"></iframe>
 		</div> <!-- #(eventbrite) -->
-
-			<div>
-
-					<h3 class="headers">Tickets can also be purchased at: </h3>
-					<ul class="list">
-						<li>Scheels</li>
-						<li>The View at Lake Wissota</li>
-						<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
-						<li>Gordy’s Market select locations*</li>
-						<li>UWEC McPhee Information Office, 8:00am-4:30pm, Monday - Friday</h3></li>
-						<li>UWEC Hilltop Recreation Center Office, 8:00am-4:30pm, Monday - Friday</h3></li>
-					</ul>
-					*Gordy’s Market Store Locations:  Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC), Hamilton (EC), Clairemont (EC), Rice Lake, Ladysmith, Cornell, Chetek, Augusta
-		<br />
-	<br />
-	<br />
-<br />
-<br />
-<br />
-<br />
-<br /></div>
-
-</section>
+		<div>
+			<h3 class="headers">Tickets can also be purchased at: </h3>
+			<ul class="list">
+				<li>Scheels</li>
+				<li>The View at Lake Wissota</li>
+				<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
+				<li>Gordy’s Market select locations*</li>
+				<li>UWEC McPhee Information Office, 8:00am-4:30pm, Monday - Friday</h3></li>
+				<li>UWEC Hilltop Recreation Center Office, 8:00am-4:30pm, Monday - Friday</h3></li>
+			</ul>
+			*Gordy’s Market Store Locations:  Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC), Hamilton (EC), Clairemont (EC), Rice Lake, Ladysmith, Cornell, Chetek, Augusta
+			<br /> <!-- BREAK -->
+			<br /> <!-- BREAK -->
+			<br /> <!-- BREAK -->
+			<br /> <!-- BREAK -->
+			<br /> <!-- BREAK -->
+			<br /> <!-- BREAK -->
+			<br /> <!-- BREAK -->
+			<br /> <!-- BREAK -->
+		</div>
+	</section>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
- </body>
+</body>
 
-
-  <!-- Footer -->
- <footer >
- 	<div class="footer hidden-xs">
-  		<br />
-  		<p> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-        <br /></p>
-  		<br />
-	</div>
-
-	<div class="footer visible-xs">
-    	<br />
-        <p class="small-footer"> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-        <br /></p>
-	</div>
-</footer><!--End footer-->
-
+<footer>
+   <div class="footer hidden-xs">
+     <br /> <!-- BREAK -->
+     <p>
+       Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+       <br /> <!-- BREAK -->
+     </p>
+   </div>
+   <div class="footer visible-xs">
+     <br /> <!-- BREAK -->
+     <p class="small-footer">
+       Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+       <br /> <!-- BREAK -->
+     </p>
+   </div>
+</footer>
 </html>
