Added Sponsors to Homepage

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">Home</a></li>
           <li class="dropdown">
             <a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -138,6 +137,8 @@
       </div>
       <br /> <!-- BREAK -->
       <br /> <!-- BREAK -->
+        <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
+      </br>
     </div>
   </section>
   <section id="content">
@@ -185,6 +186,19 @@
           <div class="videowrapper">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/UsUAM8JMG4c?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
+          <div class ="sponsors">
+            <a href="http://www.gordyscountymarket.net" target="_blank"><img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
+            <a href="http://www.scheels.com" target="_blank"><img class="indexTitleSponsor" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
+            <a href="http://www.geteskimo.com/" target="_blank"><img class="indexSponsor" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+            <a href="http://www.leinie.com" target="_blank"><img class="indexSponsor" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
+            <a href="http://www.stumpshotolives.com" target="_blank"><img class="indexSponsor" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages"></a>
+            <a href="http://www.prestigeautocorp.com" target="_blank"><img class="indexSponsor" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
+            <a href="http://www.uwec.edu/dining/" target="_blank"><img class="indexSponsor" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
+            <a href="http://www.pepsi.com/" target="_blank"><img class="indexSponsor" src="images\sponsors\pepsi.png" alt="Pepsi"></a>
+            <a href="http://www.eauclaireford.com/" target="_blank"><img class="indexSponsor" src="images\sponsors\ford.png" alt="Ford"></a>
+            <a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="indexSponsor" src="images\sponsors\edge.png" alt="Ford"></a>
+            <a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="indexSponsor" src="images\sponsors\view.png" alt="Ford"></a>
+          </div>
         </div>
         <!-- #col-sm-6  -->
       </div>
@@ -211,7 +225,7 @@
       <br /> <!-- BREAK -->
     </p>
     <div class="buildn">
-      /build 0.8.9.9
+      /build 0.9.0.0
     </div>
   </div>
   <div class="footer visible-xs">
