Fixed Duplicate Text

--- a/index.html
+++ b/index.html
@@ -132,13 +132,12 @@
     <div class="text-center">
       </br> <!-- BREAK -->
       <h1 class="headers">3rd Annual Jigs Up Blugold Ice Fishing Contest</h1>
-      <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
+      <h5 class="headers">Presented by Blugold Recreation, the Lake Wissota Lions Club, and UWEC Athletics</h5>
       <img src="images/3logo.png"</img>
       <div class="horizbar">
       </div>
       <br /> <!-- BREAK -->
       <br /> <!-- BREAK -->
-        <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
       </br>
     </div>
   </section>
